seccion de audio

--- a/proyecto02/index.html
+++ b/proyecto02/index.html
@@ -32,7 +32,7 @@
 
       <!-- --------- Redes --------- -->
       
-      <di class="main__follows">
+      <div class="main__follows">
         <div class="follows__follow">
           <p class="follow__number">
             15K
@@ -60,7 +60,12 @@
           </p>
         </div>
       </div>
-
+      <section class="layout__music">
+        <h2 class="music__title">Canción de Fondo</h2>
+        <div class="music__player">
+          <audio src="./audio/Cant Help Falling In Love - Elvis Presley (Boyce Avenue acoustic cover).mp3" controls loop></audio>
+        </div>
+      </section>
     </main>
   </div>
   
