--- a/proyecto02/index.html
+++ b/proyecto02/index.html
@@ -12,14 +12,14 @@
   <title>Proyecto02</title>
 </head>
 <body>
-  
-  <div class="layout">
+    
+  <div class="layout" id="layout__slide"><!--Agregamos ID para slide de fondo-->
     <main class="layout__main"><!-- Layout Main es toda la tarjeta completa  -->
       
       <!-- --------- Usuario --------- -->
       <div class="main__user">
         <figure class="user__container-img">
-          <img src="img/sticht.png" alt="imagen del usuario" class="user__img">
+          <img src="img/sticht2.jpg" alt="imagen del usuario" class="user__img">
         </figure>
 
         <div class="user__content">
@@ -60,14 +60,28 @@
           </p>
         </div>
       </div>
-      <section class="layout__music">
-        <h2 class="music__title">Canción de Fondo</h2>
+      <section class="layout__music">        
         <div class="music__player">
-          <audio src="./audio/Cant Help Falling In Love - Elvis Presley (Boyce Avenue acoustic cover).mp3" controls loop></audio>
+          <audio src="./audio/hawaiian-roller-coaster-ride-from-lilo-stitch-128-ytshorts.savetube.me.mp3" controls loop></audio>
         </div>
       </section>
     </main>
   </div>
-  
+  <!-- Scripte para agregar slide de imagenes de fondo -->
+  <script>
+    const images = [
+      '/proyecto02/img/sticht0.jpg',
+      '/proyecto02/img/sticht1.jpg',
+      '/proyecto02/img/sticht3.jpg'      
+    ];
+    let current = 0;
+    const slider = document.querySelector('#layout__slide');
+    function changeBackground() {
+      slider.style.backgroundImage = `url('${images[current]}')`;
+      current = (current + 1) % images.length;
+    }
+    changeBackground();
+    setInterval(changeBackground, 2000); // Cambia cada 4 segundos
+  </script>
 </body>
 </html>
